# docs

./: .cspell.json  .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .remarkrc.mjs  CONTRIBUTING.md  LICENSE  README.md  cspell.json  docusaurus.config.ts  eslint.config.ts  extra.less  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sidebars.ts  tsconfig.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: algolia-crawl.yml  deploy.yml  spellcheck.yml  test-deploy.yml
docs/: add-on-structure.md  code-examples.md  controller-basics.md  criteria.md  demo-tooltip-addon.md  designing-styles.md  development-tools.md  entities-finders-repositories.md  extra.css  general-concepts.md  index.md  lets-build-an-add-on.md  linux-dev.md  macos-dev.md  managing-the-schema.md  manual.mdx  rest-api.md  routing-basics.md  scotchbox.md  template-syntax.md  templating-language.md  thread-and-forum-types.md  vscode.md  webhooks-and-events.md  windows-dev.md
docs/api/: alerts.tag.mdx  attachments.tag.mdx  auth.tag.mdx  conversations.tag.mdx  delete-attachments-id.api.mdx  delete-conversations-id.ParamsDetails.json  delete-conversations-id.api.mdx  delete-me-avatar.api.mdx  delete-media-albums-id.api.mdx  delete-media-categories-id.api.mdx  delete-media-comments-id.api.mdx  delete-media-id.api.mdx  delete-nodes-id.ParamsDetails.json  delete-nodes-id.api.mdx  delete-posts-id.api.mdx  delete-profile-post-comments-id.api.mdx  (+362 more)
overrides/: main.html
static/: robots.txt
xf2/: footer.html  main.html
(+495 files in other folders)
