[tool.poetry]
name = "xf-dev-docs"
version = "1.0.0"
description = "Developer documentation for XenForo"
authors = ["XenForo Ltd. <contact@xenforo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
